[package]
name = "rsec"
version = "0.0.9999"
authors = ["Trung Pham <pham.bao.trung@gmail.com>"]

[dependencies]
rusqlite = { version = "0.16.0", features = ["bundled"] }
sodiumoxide = "0.2.0"
snap = "0.2"
getopts = "0.2.18"
rust-argon2 = "0.4.0"
rpassword = "2.1.0"
reqwest = "0.9.9"
url = "1.7.2"
libc = "0.2.48"
rand = "0.6.4"

[build-dependencies]
cc = "1.0"

[profile.test] 
opt-level = 3